--- a/project-thaumaturgy.csproj
+++ b/project-thaumaturgy.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Godot.NET.Sdk/4.2.2">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <CodeAnalysisRuleSet>e:\Code\Godot\project-thaumaturgy\.vscode\ruleset.xml</CodeAnalysisRuleSet>
     <EnableDynamicLoading>true</EnableDynamicLoading>
     <RootNamespace>projectthaumaturgy</RootNamespace>
   </PropertyGroup>
